[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-ingest"
version = "0.1.0"
description = "RAG Ingester module"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = [
    "python-dotenv",
    "pydantic",
    "llama-index",
    "chromadb",
    "pymupdf",
    "pydantic-settings",
    "pillow",
    "openai",
    "click",
    "langchain"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov"
]
