[project]
name = "rag-query"
version = "0.1.0"
description = "RAG Query module"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
requires-python = ">=3.13.5"

dependencies = [
    "chromadb",
    "openai",
    "pydantic",
    "python-dotenv",
    "llama-index",
    "pydantic-settings",
    "llama-index-vector-stores-chroma",
    "sentence-transformers"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
